# cicspi

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
cicspi/: __init__.py  device.py  entry.py  spiceobject.py  spiceparser.py  subckt.py  subcktinstance.py
